--- a/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
+++ b/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
@@ -20,10 +20,10 @@
    <widget class="QLabel" name="button_test">
     <property name="geometry">
      <rect>
-      <x>780</x>
+      <x>880</x>
       <y>30</y>
-      <width>191</width>
-      <height>61</height>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -33,8 +33,8 @@
    <widget class="QPushButton" name="startButton">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>110</y>
+      <x>770</x>
+      <y>80</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -59,8 +59,8 @@ background-color: rgb(150, 223, 111);</string>
    <widget class="QPushButton" name="stopButton">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>190</y>
+      <x>770</x>
+      <y>160</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -76,8 +76,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QPushButton" name="createROIButton">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>260</y>
+      <x>770</x>
+      <y>230</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -93,8 +93,8 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QPushButton" name="removeROIButton">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>340</y>
+      <x>770</x>
+      <y>310</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -123,10 +123,10 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QTabWidget" name="settings_patientInfo">
     <property name="geometry">
      <rect>
-      <x>990</x>
+      <x>940</x>
       <y>20</y>
-      <width>231</width>
-      <height>631</height>
+      <width>291</width>
+      <height>621</height>
      </rect>
     </property>
     <property name="font">
@@ -310,8 +310,8 @@ border-color: rgb(34, 34, 34);</string>
      <widget class="QSpinBox" name="LASCAarea">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>50</y>
+        <x>150</x>
+        <y>10</y>
         <width>71</width>
         <height>51</height>
        </rect>
@@ -335,8 +335,8 @@ border-color: rgb(56, 56, 56);</string>
      <widget class="QLabel" name="LASCA_label">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>70</y>
+        <x>20</x>
+        <y>30</y>
         <width>91</width>
         <height>21</height>
        </rect>
@@ -352,7 +352,7 @@ border-color: rgb(56, 56, 56);</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>190</y>
+        <y>120</y>
         <width>111</width>
         <height>21</height>
        </rect>
@@ -367,8 +367,8 @@ border-color: rgb(56, 56, 56);</string>
      <widget class="QDoubleSpinBox" name="exposuretime">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>180</y>
+        <x>150</x>
+        <y>100</y>
         <width>71</width>
         <height>51</height>
        </rect>
@@ -399,9 +399,9 @@ border-color: rgb(56, 56, 56);</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>120</y>
-        <width>261</width>
-        <height>51</height>
+        <y>70</y>
+        <width>231</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -414,8 +414,8 @@ border-color: rgb(56, 56, 56);</string>
      <widget class="QPushButton" name="AmbL_Button">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>340</y>
+        <x>60</x>
+        <y>270</y>
         <width>171</width>
         <height>41</height>
        </rect>
@@ -430,8 +430,8 @@ border-color: rgb(56, 56, 56);</string>
      <widget class="QPushButton" name="Dark_Button">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>410</y>
+        <x>60</x>
+        <y>330</y>
         <width>171</width>
         <height>41</height>
        </rect>
@@ -441,6 +441,101 @@ border-color: rgb(56, 56, 56);</string>
       </property>
       <property name="text">
        <string>Take Dark Images</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>190</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;</string>
+      </property>
+      <property name="text">
+       <string>New Base image:</string>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="spinBox">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>180</y>
+        <width>71</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Segoe UI Light</family>
+        <pointsize>12</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(17, 132, 255);
+border-color: rgb(56, 56, 56);</string>
+      </property>
+      <property name="maximum">
+       <number>300</number>
+      </property>
+      <property name="value">
+       <number>20</number>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="CalibrateStill_Button">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>460</y>
+        <width>171</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+background-color: rgb(135, 68, 115);</string>
+      </property>
+      <property name="text">
+       <string>Take Still Image</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="CalibrateMoving_Button">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>520</y>
+        <width>171</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+background-color: rgb(135, 68, 115);</string>
+      </property>
+      <property name="text">
+       <string>Take moving image</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>420</y>
+        <width>101</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+</string>
+      </property>
+      <property name="text">
+       <string>Calibration:</string>
       </property>
      </widget>
     </widget>
@@ -458,8 +553,8 @@ border-color: rgb(56, 56, 56);</string>
    <widget class="QScrollArea" name="scrollArea_2">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>450</y>
+      <x>770</x>
+      <y>420</y>
       <width>141</width>
       <height>121</height>
      </rect>
@@ -630,8 +725,8 @@ border-color: rgb(56, 56, 56);</string>
    <widget class="QPushButton" name="laserButton">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>590</y>
+      <x>770</x>
+      <y>560</y>
       <width>141</width>
       <height>41</height>
      </rect>
