--- a/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
+++ b/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
@@ -77,7 +77,7 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
     <property name="geometry">
      <rect>
       <x>770</x>
-      <y>230</y>
+      <y>240</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -94,7 +94,7 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
     <property name="geometry">
      <rect>
       <x>770</x>
-      <y>310</y>
+      <y>320</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -415,13 +415,14 @@ border-color: rgb(56, 56, 56);</string>
       <property name="geometry">
        <rect>
         <x>60</x>
-        <y>270</y>
+        <y>250</y>
         <width>171</width>
         <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(64, 140, 255);</string>
+       <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+background-color: rgb(64, 140, 255);</string>
       </property>
       <property name="text">
        <string>Take Ambient light Image</string>
@@ -431,13 +432,14 @@ border-color: rgb(56, 56, 56);</string>
       <property name="geometry">
        <rect>
         <x>60</x>
-        <y>330</y>
+        <y>310</y>
         <width>171</width>
         <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(64, 140, 255);</string>
+       <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+background-color: rgb(64, 140, 255);</string>
       </property>
       <property name="text">
        <string>Take Dark Images</string>
@@ -536,6 +538,23 @@ background-color: rgb(135, 68, 115);</string>
       </property>
       <property name="text">
        <string>Calibration:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="Save_Im">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>370</y>
+        <width>171</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+background-color: rgb(64, 140, 255);</string>
+      </property>
+      <property name="text">
+       <string>Save Image</string>
       </property>
      </widget>
     </widget>
