--- a/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
+++ b/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
@@ -148,7 +148,7 @@ border-color: rgb(34, 34, 34);</string>
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <property name="iconSize">
      <size>
@@ -222,7 +222,7 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;The dark blue button will reset the calibration to the standard values!&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="reset_Button">
       <property name="geometry">
        <rect>
         <x>90</x>
@@ -401,7 +401,7 @@ border-color: rgb(56, 56, 56);</string>
        <string>New Base image:</string>
       </property>
      </widget>
-     <widget class="QSpinBox" name="spinBox">
+     <widget class="QSpinBox" name="Amb_spinBox">
       <property name="geometry">
        <rect>
         <x>190</x>
@@ -447,7 +447,7 @@ background-color: rgb(64, 140, 255);</string>
        <string>Save Image</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="checkBox">
+     <widget class="QCheckBox" name="Contrast_checkBox">
       <property name="geometry">
        <rect>
         <x>50</x>
@@ -484,7 +484,7 @@ background-color: rgb(64, 140, 255);</string>
        <string>Skalfaktor: </string>
       </property>
      </widget>
-     <widget class="QSpinBox" name="spinBox_2">
+     <widget class="QSpinBox" name="scaling_spinBox">
       <property name="geometry">
        <rect>
         <x>190</x>
@@ -497,6 +497,15 @@ background-color: rgb(64, 140, 255);</string>
        <string notr="true">background-color: rgb(17, 132, 255);
 font: 75 12pt &quot;Segoe UI Light&quot;;
 border-color: rgb(56, 56, 56);</string>
+      </property>
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>10</number>
+      </property>
+      <property name="value">
+       <number>2</number>
       </property>
      </widget>
     </widget>
@@ -677,7 +686,7 @@ border-color: rgb(56, 56, 56);</string>
       <x>720</x>
       <y>420</y>
       <width>141</width>
-      <height>121</height>
+      <height>161</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -692,7 +701,7 @@ border-color: rgb(56, 56, 56);</string>
        <x>0</x>
        <y>0</y>
        <width>139</width>
-       <height>119</height>
+       <height>159</height>
       </rect>
      </property>
      <widget class="QListWidget" name="listROI">
@@ -701,7 +710,7 @@ border-color: rgb(56, 56, 56);</string>
         <x>10</x>
         <y>10</y>
         <width>121</width>
-        <height>101</height>
+        <height>141</height>
        </rect>
       </property>
       <property name="palette">
@@ -842,22 +851,6 @@ border-color: rgb(56, 56, 56);</string>
       </property>
      </widget>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="laserButton">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>560</y>
-      <width>141</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 71, 15);</string>
-    </property>
-    <property name="text">
-     <string>Turn on laser</string>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
