--- a/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
+++ b/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
@@ -674,7 +674,7 @@ border-color: rgb(56, 56, 56);</string>
     <property name="geometry">
      <rect>
       <x>720</x>
-      <y>420</y>
+      <y>470</y>
       <width>141</width>
       <height>161</height>
      </rect>
@@ -841,6 +841,39 @@ border-color: rgb(56, 56, 56);</string>
       </property>
      </widget>
     </widget>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>450</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;</string>
+    </property>
+    <property name="text">
+     <string>List of ROIs</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Laser_error">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>50</y>
+      <width>201</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
