--- a/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
+++ b/LSI Project GUI/LSI Project GUI/LSIProjectGUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1246</width>
-    <height>704</height>
+    <width>1325</width>
+    <height>780</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -114,10 +114,10 @@ font: 75 11pt &quot;Segoe UI Light&quot;;</string>
    <widget class="QTabWidget" name="settings_patientInfo">
     <property name="geometry">
      <rect>
-      <x>890</x>
+      <x>880</x>
       <y>10</y>
       <width>351</width>
-      <height>651</height>
+      <height>691</height>
      </rect>
     </property>
     <property name="font">
@@ -545,9 +545,9 @@ border-color: rgb(56, 56, 56);</string>
      <widget class="QLabel" name="genderLabel">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>50</x>
         <y>180</y>
-        <width>61</width>
+        <width>71</width>
         <height>20</height>
        </rect>
       </property>
@@ -639,9 +639,9 @@ border-color: rgb(56, 56, 56);</string>
      <widget class="QLabel" name="nameLabel">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>60</x>
         <y>100</y>
-        <width>51</width>
+        <width>61</width>
         <height>20</height>
        </rect>
       </property>
@@ -656,9 +656,9 @@ border-color: rgb(56, 56, 56);</string>
       <property name="geometry">
        <rect>
         <x>80</x>
-        <y>140</y>
-        <width>31</width>
-        <height>21</height>
+        <y>130</y>
+        <width>41</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -671,9 +671,9 @@ border-color: rgb(56, 56, 56);</string>
      <widget class="QLabel" name="commentsLabel">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>60</x>
         <y>270</y>
-        <width>191</width>
+        <width>241</width>
         <height>31</height>
        </rect>
       </property>
@@ -690,7 +690,7 @@ border-color: rgb(56, 56, 56);</string>
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>500</y>
+      <y>540</y>
       <width>431</width>
       <height>161</height>
      </rect>
@@ -713,7 +713,7 @@ border-color: rgb(56, 56, 56);</string>
     <property name="geometry">
      <rect>
       <x>720</x>
-      <y>470</y>
+      <y>480</y>
       <width>141</width>
       <height>161</height>
      </rect>
@@ -887,7 +887,7 @@ border-color: rgb(56, 56, 56);</string>
       <x>750</x>
       <y>450</y>
       <width>91</width>
-      <height>16</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -902,13 +902,26 @@ border-color: rgb(56, 56, 56);</string>
      <rect>
       <x>690</x>
       <y>50</y>
-      <width>201</width>
+      <width>181</width>
       <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 12pt &quot;Segoe UI Light&quot;;
+     <string notr="true">font: 75 10pt &quot;Segoe UI Light&quot;;
 </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="col_Map_Im_Label">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>490</y>
+      <width>271</width>
+      <height>41</height>
+     </rect>
     </property>
     <property name="text">
      <string/>
@@ -920,8 +933,8 @@ border-color: rgb(56, 56, 56);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1246</width>
-     <height>21</height>
+     <width>1325</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
